add patch route for updating plug device state

--- a/ui/src/tile/tile.scss
+++ b/ui/src/tile/tile.scss
@@ -40,9 +40,7 @@
     }
   }
 
-  &.tile-type-SENSOR {
-    svg {
-      font-size: 1.8rem;
-    }
+  &.tile-state-ON {
+    background-color: #fbe7c6;
   }
 }
