--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -11,6 +11,14 @@ body {
   height: 100%;
 }
 
+* {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 ul {
   display: grid;
   grid-template-columns: repeat(3, calc(100% / 3));
