--- a/ui/src/tile/tile.scss
+++ b/ui/src/tile/tile.scss
@@ -18,16 +18,16 @@
     padding: 4px;
 
     > div {
-      font-size: 1.25rem;
+      font-size: 1rem;
 
       .title-unit {
         display: inline-flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         justify-content: space-between;
         vertical-align: text-top;
-        height: 1.4rem;
         margin-left: 4px;
+        font-size: 0.7rem;
 
         em {
           font-size: 0.5rem;
