--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   height: 100%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 * {
